tests/Compiler/SemanticErrors/duplicateMain/duplicateMain.src
function main(i: integer) => void
{
}

function main() => void
{
}
